--- a/13-Flask/flask/templates/result.html
+++ b/13-Flask/flask/templates/result.html
@@ -1,8 +1,5 @@
-<html>
-    <h2>
-        Final Results
-    </h2>
-    <body>
-        
-    </body>
-</html>
+<h1>
+
+Based on the marks You have {{ results}}
+
+</h1>
